examples/errors/Include.huff
#include "./Recursive.huff"

#define macro MAIN() = takes(0) returns(0) {
    // wow
}
